Fixed build file name, fixed disk usage setting

--- a/src/main/resources/kairos-remote.properties
+++ b/src/main/resources/kairos-remote.properties
@@ -23,7 +23,7 @@ kairosdb.remote.random_delay=0
 # values in this comma-separated list are forwarded on.
 #kairosdb.remote.prefix_filter=""
 
-# Drops the oldest zipped files waiting to be sent if the available disk space percent is
+# Drops the oldest zipped files waiting to be sent if the used disk space percent is
 # greater than the specified value. This is to prevent filling up the disk space
 # if the receiving node is inaccessible. If set to 100, no files are deleted.
 # The percent must be greater than 0.
