Added fake datastore and service key store so kairos can run in pure remote mode.

--- a/src/main/resources/kairos-remote.properties
+++ b/src/main/resources/kairos-remote.properties
@@ -6,6 +6,9 @@
 # Sample use case is to run clusters in parallel before migrating to larger cluster
 #kairosdb.service.remote=org.kairosdb.plugin.remote.ListenerModule
 
+# If you want kairos to run without any local datastore you can uncomment this line
+#kairosdb.service.datastore=org.kairosdb.plugin.remote.FakeDatastoreModule
+
 # Location to store data locally before it is sent off
 kairosdb.remote.data_dir=.
 kairosdb.remote.remote_url=http://10.92.1.41:8080
