PULSE-1750, added kairosdb.service_folder.remote property to kairos-remote.properties file, so KairosDB could locate correct plugin files.

--- a/src/main/resources/kairos-remote.properties
+++ b/src/main/resources/kairos-remote.properties
@@ -5,6 +5,7 @@
 # configured Datastore as well as send data on to a remote Kairos cluster
 # Sample use case is to run clusters in parallel before migrating to larger cluster
 #kairosdb.service.remote=org.kairosdb.plugin.remote.ListenerModule
+kairosdb.service_folder.remote=/opt/kairosdb/lib/kairos-remote
 
 # If you want kairos to run without any local datastore you can uncomment this line
 #kairosdb.service.datastore=org.kairosdb.plugin.remote.FakeDatastoreModule
