--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,7 @@
 		<dependency>
 			<groupId>org.kairosdb</groupId>
 			<artifactId>kairosdb</artifactId>
-			<version>1.2.0-1</version>
+			<version>1.3.0-0.1beta</version>
 			<scope>provided</scope>
 		</dependency>
 
